samples/_failures_safe/1761199020_aba701_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5b6ad35f.c: In function ‘main’:
./samples/SAFE/__tmp_5b6ad35f.c:167:17: error: expected expression at end of input
  167 |                 if (multiply_matrices(&mat1, &mat2, &
      |                 ^~
./samples/SAFE/__tmp_5b6ad35f.c:167:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_5b6ad35f.c:167:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_5b6ad35f.c:167:17: error: expected declaration or statement at end of input
